syntax = "proto3";

package auth;

service Auth {
  rpc register (RegisterRequest) returns (RegisterResponse);
  rpc login (LoginRequest) returns (LoginResponse);
  rpc validateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc refreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
  string userId = 3;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string accessToken = 3;
  string refreshToken = 4;
  string userId = 5;
}

message ValidateTokenResponse {
  bool valid = 1;
  string userId = 2;
  string message = 3;
}

message RefreshTokenResponse {
  bool success = 1;
  string message = 2;
  string accessToken = 3;
  string refreshToken = 4;
}
